--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "next": "latest",
+    "next-auth": "^4.18.0",
+    "next-http-proxy-middleware": "^1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar": "^2.0.1",
